2008-10-05  Raul Mateos  <raulofpandora@gmail.com>

	* install.php: Updated PHP version dependency.

2008-10-02  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/reporting/reporting_xml.php: Updated to handle logins in
	case our XML client can't handle sessions. If you use this, try to
	use POST requests and HTTPS for login. Only if your client is really
	braindead should you be using GET for login. Example in source.

2008-10-02  Esteban Sanchez  <estebans@artica.es>

	* operation/reporting/reporting_viewer.php,
	operation/reporting/reporting_xml.php: Quote order field on
	get_db_all_rows_field_filter(), since it was a reserved word in SQL.
	Style corrections.

2008-10-02  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Removed quotes when using $order_field so
	it can be used order (ASC or DESC).

	* include/functions_html.php: Added thead and tbody to be more XHTML
	compliant.
	
	* operation/reporting/graph_viewer.php: Fixed a typo error that was
	not allowing to remove a graph. Style correction, variables renamed to
	have a meaning ($row has no scope or meaning, please do not use it!)
	and better use of the parameters.

	* godmode/extensions.php: Style correction.

2008-10-01  Ramon Novoa  <rnovoa@artica.es>

	* godmode/agentes/module_manager_editor_network.php: Added support for
	  different SNMP versions.

	* godmode/agentes/configurar_agente.php: Removed debugging code.

2008-10-01  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager/lib/libupdate_manager_client.php: Added a
	timeout to the XML-RPC client.

2008-09-30  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/reporting/reporting_xml.php: Reporting does now output XML
	reports for use in dashboards from other vendors.

	* operation/reporting/custom_reporting.php: Added link for XML reports

2008-09-30  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* reporting/fgraph.php: monitors_health_pipe was in an aesthetically